--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -2,33 +2,50 @@
   "name": "spring-react-java",
   "version": "0.0.1",
   "devDependencies": {
+    "assets-webpack-plugin": "^3.4.0",
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-node6": "^11.0.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "del": "^2.2.1",
     "expose-loader": "^0.7.1",
+    "extend": "^3.0.0",
+    "gaze": "^1.1.1",
     "imports-loader": "^0.6.5",
-    "isomorphic-style-loader": "^1.0.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
+    "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
+    "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
+    "sass-loader": "^4.0.0",
     "webpack": "^1.13.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.9.1",
     "babel-runtime": "^6.9.2",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "bluebird": "^3.4.1",
+    "history": "^3.0.0",
+    "isomorphic-style-loader": "^1.0.0",
     "jquery": "^3.1.0",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-router": "^2.6.0",
-    "react-router-bootstrap": "^0.23.0"
+    "react-dom": "^15.2.1"
   },
   "scripts": {
     "watch": "webpack -d --watch",
     "dev-build": "webpack -d --display-modules",
-    "prod-build": "webpack -d -p"
+    "prod-build": "webpack -d -p",
+    "babel-build": "babel-node tools/run build"
+  },
+  "babel": {
+    "presets": [
+      "node6",
+      "stage-0"
+    ]
   }
 }
